# Red-Winequality

./: main.py  pyproject.toml  stellar.ipynb  wine_quality.ipynb
